--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "charity",
   "version": "1.0.0",
+  "homepage": "https://caoqui.github.io/charity/",
   "license": "(MIT AND Apache-2.0)",
   "scripts": {
     "start": "cd frontend && npm run start",
-    "deploy": "cd contract && npm run deploy",
+    "deploy2": "cd contract && npm run deploy",
     "build": "npm run build:contract && npm run build:web",
     "build:web": "cd frontend && npm run build",
     "build:contract": "cd contract && npm run build",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "cd contract && npm test",
     "test:integration": "npm run build:contract && cd integration-tests && npm test -- -- \"./contract/build/charity.wasm\"",
-    "postinstall": "cd frontend && npm install && cd .. && cd integration-tests && npm install && cd .. && cd contract && npm install"
+    "postinstall": "cd frontend && npm install && cd .. && cd integration-tests && npm install && cd .. && cd contract && npm install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "near-cli": "^3.3.0"
   },
   "dependencies": {
+    "gh-pages": "^6.0.0",
     "near-sdk-js": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
